--- a/SiteEnergiaR/WebContent/Biomassa.html
+++ b/SiteEnergiaR/WebContent/Biomassa.html
@@ -4,14 +4,14 @@
 		<title>Pagina Biomassa</title>
 
 		<link rel="stylesheet" href="CSS/MenuHF.css">
-		<link rel="stylesheet" href="CSS/EolicaHF.css">
+		<link rel="stylesheet" href="CSS/Paginas.css">
 
 	</head>
 
 	<body>
 
 		<!-- Slide Show -->
-		<div class="slideshow-container">
+	<div class="slideshow-container">
 
 				<div class="mySlides fade">
 					<div class="numbertext">1 / 6</div>
@@ -51,7 +51,6 @@
 
 		</div>
 
-
 	<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 		<ul>
@@ -68,25 +67,91 @@
 	</div>
 
 
+		<h1><center>Energia da Biomassa</center></h1>
 
-	<div  class="trocaCor">
+		<div  class="trocaCor">
+			<img id="Geotermica_1" src="Imagem\biomassa.png" alt="Energia da Biomassa">
 
-	</div>
+			<p class="b1"><b>Definição:</b></p>
+
+			A biomassa pode ser compreendida como toda matéria orgânica que pode ser de origem vegetal ou animal, utilizada na produção de energia.</br>
+			Pode ser obtida por meio da decomposição de vários recursos renováveis como por exemplo, madeira, resíduos agrícolas, plantas, restos de alimentos e até <b>lixo</b>.
+		</div>
+
+		<div class="div2Biomassa">
+			<img id="Eolica1" src="Imagem\bio_2.jpg" alt="Biomassa">
+			<p class="b1"><b>Como é obtida a energia?</b></p>
+
+			<p class="a1">
+				A biomassa pode ser utilizada diretamente como combustível ou passar por um processo de pirólise,	gasificação, combustão ou co-combustão de um material que deve ser orgânico ou que se encontre no ecossistema.
+			</p>
+
+			<p class="b1"><b>Pirólise:</b></p>
+
+			<p class="a1">
+				Nesse processo a biomassa passa por altas temperaturas sem estar na presença de oxigênio, visando uma decomposição mais rápida.
+				Sobrando uma mistura de gases, líquidos (óleos vegetais) e sólidos (carvão vegetal).
+			</p>
+
+			<p class="b1"><b>Combustão:</b></p>
+
+			<p class="a1">
+				Já nesse processo a biomassa também passa por altas temperaturas, mas com a presença de oxigênio, produzindo vapor a alta pressão.
+				Sendo normalmente utilizado em caldeiras ou para mover turbinas, tendo uma eficiência energética de 20% a 25%.
+			</p>
+
+			<p class="b1"><b>Co-Combustão:</b></p>
+
+			<p class="a1">
+				Nessa prática propõe a substituição do carvão mineral por biomassa, reduzindo significativamente a emissão de poluentes.
+				A faixa de desempenho no uso da biomassa encontra-se entre 30% a 37%, sendo uma escolha bem relevante e econômica.
+			</p>
+
+		</div>
+
+		<div  class="trocaCor">
+			<img id="Geotermica_1" src="Imagem\ranking_bio.jpg" alt="Energia da Biomassa">
+
+			<p class="b1"><b>Paises que mais utilizam da Biomassa:</b></p>
+
+			<p>
+			Em uma pesquisa realizada pela IEA Task 40 – Duvisão especilalizada em bioenergia da Agencia Internacional de energia(IEA), mostra que o Brasil é
+			responsável por cerca de 16% na utilização de energia de biomassa sendo o maior nesse setor, seguido de Estados Unidos que tem uma participação mundial de 9% e a
+			Alemanha que possui 7%. </br>
+			Os 15 paises do topo dessa lista representam um total de 65% do uso global da biomassa na produção de energia.
+			</p>
+
+			<p>
+				Segundo o material da Task, em 2010 no Brasil 21% da energia do setor industrial foi proveniente do bagaço da cana de açúcar.
+				Sendo a maior parte dessa energia utilizada no setor de alimentos e bebidas, correspondendo a 70% da demanda de energia do setor.
+			</p>
+
+		</div>
+
+		<div class="div2Biomassa">
+			<p class="b1"><b>Vantagens:</b></p>
+
+			<p class="a1">
+				- Baixo custo de aquisição<br>
+				- As emissões não contribuem para o efeito estufa<br>
+				- É menos agressiva ao meio ambiente<br>
+				- Produção a partir de uma grande variedade de materiais<br>
+			</p>
+
+			<p class="b1"><b>Desvantagens:</b></p>
+
+			<p class="a1">
+
+			- Elevado custo financeiro de equipamentos</br>
+			- A queima da biomassa é relacionada com doenças respiratórias<br>
+			- Biocombustíveis líquidos podem emitir enxofre e contribuir para a chuva acida <br>
+			- Dificuldade de armazenamento na biomassa sólida<br>
+			- Pode resultar em impactos ambientais em florestas<br>
+
+			</p>
+		</div>
 
 
-	<div class="trocaCor2">
-
-	</div>
-
-	<div class="trocaCor">
-
-
-
-	</div>
-
-	<div class="trocaCor3">
-
-	</div>
 
 	<footer>
 	</footer>
