--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -11,174 +11,161 @@
 	<body>
 
 		<!-- Slide Show -->
-	<div class="slideshow-container">
+		<div class="slideshow-container">
 
-			<div class="mySlides fade">
-				<div class="numbertext">1 / 6</div>
-				<img src="Imagem\onda.jpg" class="imgSlide">
-				<div class="text">Ondas</div>
-			</div>
+				<div class="mySlides fade">
+					<div class="numbertext">1 / 6</div>
+					<img src="Imagem\onda.jpg" class="imgSlide">
+					<div class="text">Ondas</div>
+				</div>
 
-			<div class="mySlides fade">
-				<div class="numbertext">2 / 6</div>
-				<img src="Imagem\solar.jpg" class="imgSlide">
-				<div class="text">Solar</div>
-			</div>
+				<div class="mySlides fade">
+					<div class="numbertext">2 / 6</div>
+					<img src="Imagem\solar.jpg" class="imgSlide">
+					<div class="text">Solar</div>
+				</div>
 
-			<div class="mySlides fade">
-				<div class="numbertext">3 / 6</div>
-				<img src="Imagem\eolica.jpg" class="imgSlide">
-				<div class="text">Eólica</div>
-			</div>
+				<div class="mySlides fade">
+					<div class="numbertext">3 / 6</div>
+					<img src="Imagem\eolica.jpg" class="imgSlide">
+					<div class="text">Eólica</div>
+				</div>
 
-			<div class="mySlides fade">
-				<div class="numbertext">4 / 6</div>
-				<img src="Imagem\hidrogenio.jpg" class="imgSlide">
-				<div class="text">Hidrogenio</div>
-			</div>
+				<div class="mySlides fade">
+					<div class="numbertext">4 / 6</div>
+					<img src="Imagem\hidrogenio.jpg" class="imgSlide">
+					<div class="text">Hidrogenio</div>
+				</div>
 
-			<div class="mySlides fade">
-				<div class="numbertext">5 / 6</div>
-				<img src="Imagem\geotermica.jpg" class="imgSlide">
-				<div class="text">Geotermica</div>
-			</div>
+				<div class="mySlides fade">
+					<div class="numbertext">5 / 6</div>
+					<img src="Imagem\geotermica.jpg" class="imgSlide">
+					<div class="text">Geotermica</div>
+				</div>
 
-			<div class="mySlides fade">
-				<div class="numbertext">6 / 6</div>
-				<img src="Imagem\biomassa.jpg" class="imgSlide">
-				<div class="text">Biomassa</div>
-			</div>
+				<div class="mySlides fade">
+					<div class="numbertext">6 / 6</div>
+					<img src="Imagem\biomassa.jpg" class="imgSlide">
+					<div class="text">Biomassa</div>
+				</div>
 
+		</div>
+
+
+
+	<div class="logo">
+		<img src="Imagem/Energy_logo.png">
+		<ul>
+			<li><a class="active" href="Home.html">HOME</a></li>
+			<li><a href="Solar.html">SOLAR</a></li>
+			<li><a href="Eolica.html">EOLICA</a></li>
+			<li><a href="Biomassa.html">BIOMASSA</a></li>
+			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
+			<li><a href="Geotermica.html">GEOTERMICA</a></li>
+			<li><a href="Ondas.html">ONDAS</a></li>
+			<li><a href="Formulario.html">FORMULARIO</a></li>
+			<li><a href="app.html">APP</a></li>
+		</ul>
+	</div>
+
+	<h1><center>Energia Solar</center></h1>
+
+	<div  class="div1_home">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
 	</div>
 
 
+	<div class="div2_home">
+		<h1 style="margin-left:-60px;"><center>Energia Eólica</center></h1>
 
-<div class="logo">
-	<img src="Imagem/Energy_logo.png">
-	<ul>
-		<li><a class="active" href="Home.html">HOME</a></li>
-		<li><a href="Solar.html">SOLAR</a></li>
-		<li><a href="Eolica.html">EOLICA</a></li>
-		<li><a href="Biomassa.html">BIOMASSA</a></li>
-		<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
-		<li><a href="Geotermica.html">GEOTERMICA</a></li>
-		<li><a href="Ondas.html">ONDAS</a></li>
-		<li><a href="Formulario.html">FORMULARIO</a></li>
-		<li><a href="app.html">APP</a></li>
-	</ul>
-</div>
+		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
+		<p class="b1">
+			<b>
+				Usinas Geotérmicas:
+			</b>
+		</p>
+		<p class="a1">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
+	</div>
 
-<h1><center>Energia Solar</center></h1>
+	<h1>Energia da Biomassa</h1>
+	<div  class="div1_home">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
+	</div>
 
-<div  class="div1_home">
-	<img id="Solar_Home1" src="Imagem\Solar_home.png" alt="Energia_Solar">
-	<p class="b1">
-		<b>
-			Definição:
-		</b>
-	</p>
-	A energia solar é uma energiar renovavel a qual utiliza da luz do sol para gerar energia elétrica atravéz de painéis
-	elétricos.
-	Durante o dia esta energia é coletada e armazenada neste coletor que ao final do
-	dia é utilizada na rede elétrica de sua residência como um gerador.<br>
-	<p class="a1">
-		<img class="Botao_Home1" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão">
-	</p>
-</div>
+	<div class="div2_home">
+		<h1><center>Energia do Hidrogenio</center></h1>
 
+		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
+		<p class="b1">
+			<b>
+				Usinas Geotérmicas:
+			</b>
+		</p>
+		<p class="a1">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
+	</div>
 
-<div class="div2_home">
-	<h1 style="margin-left:-60px;"><center>Energia Eólica</center></h1>
+	<h1>Energia Geotermica</h1>
+	<div  class="div1_home">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
+	</div>
 
-	<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
-	<p class="b1">
-		<b>
-			Usinas Geotérmicas:
-		</b>
-	</p>
-	<p class="a1">
-		Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
-		sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
-		sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
-		geradores de turbina, produzindo assim, a eletricidade.
-	<img class="Botao_Home2" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão">
-	</p>
-</div>
+	<div class="trocaCor3">
+		<h1><center>Energia das Ondas</center></h1>
 
-<h1>Energia da Biomassa</h1>
-<div  class="div1_home">
-	<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
-	<p class="b1">
-		<b>
-			Definição:
-		</b>
-	</p>
-	<p class="a1">
-		A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
-		é a energia gerada pelo calor proveniente do interior da terra.
-		<br>
-		<img class="Botao_Home1" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão">
-	</p>
-</div>
-
-<div class="div2_home">
-	<h1><center>Energia do Hidrogenio</center></h1>
-
-	<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
-	<p class="b1">
-		<b>
-			Usinas Geotérmicas:
-		</b>
-	</p>
-	<p class="a1">
-		Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
-		sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
-		sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
-		geradores de turbina, produzindo assim, a eletricidade.
-	<img class="Botao_Home2" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão">
-	</p>
-
-</div>
-
-<h1>Energia Geotermica</h1>
-<div  class="div1_home">
-	<p class="b1">
-		<b>
-			Definição:
-		</b>
-	</p>
-	<p class="a1">
-		A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
-		é a energia gerada pelo calor proveniente do interior da terra.
-		<br>
-		<img class="Botao_Home1" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão">
-	</p>
-</div>
-
-<div class="trocaCor3">
-	<h1><center>Energia das Ondas</center></h1>
-
-	<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
-	<p class="b1">
-		<b>
-			Usinas Geotérmicas:
-		</b>
-	</p>
-	<p class="a1">
-		Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
-		sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
-		sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
-		geradores de turbina, produzindo assim, a eletricidade.
-		<br>
-		<img class="Botao_Home2" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão" href="Ondas.html">>
-	</p>
-</div>
-
-
+		<!--<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">-->
+		<p class="b1">
+			<b>
+				Usinas Geotérmicas:
+			</b>
+		</p>
+		<p class="a1">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
+	</div>
 
 	<footer>
 		<img id="logoFooter" src="Imagem/logoFooter.png">
-		<p class="copy">
+		<p class="copyright">
 			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
 			Cia. MahaloEntertainment Soluçoes de Informática<br>
 			Copyright2019
