--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -176,7 +176,14 @@
 			Os fótons são os raios de sol que quando chegam na terra e entram em contato com a placa solar atingindo suas células de silício fazem que alguns elétrons (carga Negativa) se desprendam dos átomos, esses elétrons irão percorrer através das células para a parte que houver ausência deles, o espaço é preenchido e o processo continua durante o dia todo o que gera uma corrente elétrica que é chamada de energia solar Fotovoltaica.
 		</p>
 	</div>
+
 	<footer>
+		<img id="logoFooter" src="Imagem/logoFooter.png">
+		<p class="copyright">
+			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
+			Cia. MahaloEntertainment Soluçoes de Informática<br>
+			Copyright2019
+		</p>
 	</footer>
 
 
