--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -65,7 +65,7 @@
   			</ul>
   		</div>
   		<!-- Divisão em Branco - topo app-->
-      
+
   <div class="fundo">
     <div class="appIntroducao">
       <h1 class="titulo"><center>Brain Energy</center></h1>
@@ -111,6 +111,12 @@
   </div>
 
       <footer>
+        <img id="logoFooter" src="Imagem/logoFooter.png">
+    		<p class="copyright">
+    			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
+    			Cia. MahaloEntertainment Soluçoes de Informática<br>
+    			Copyright2019
+    		</p>
       </footer>
 
       <script>
