--- a/SiteEnergiaR/WebContent/Eolica.html
+++ b/SiteEnergiaR/WebContent/Eolica.html
@@ -182,6 +182,12 @@
 
 
 	<footer>
+		<img id="logoFooter" src="Imagem/logoFooter.png">
+		<p class="copyright">
+			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
+			Cia. MahaloEntertainment Soluçoes de Informática<br>
+			Copyright2019
+		</p>
 	</footer>
 
 	<script>
