--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -189,7 +189,12 @@
 	</div>
 
 	<footer>
-		
+		<img id="logoFooter" src="Imagem/logoFooter.png">
+		<p class="copyright">
+			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
+			Cia. MahaloEntertainment Soluçoes de Informática<br>
+			Copyright2019
+		</p>
 	</footer>
 
 	<script>
