--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -69,7 +69,6 @@
 		<h1><center>Energia de hidrogênio</center></h1>
 
 		<div  class="introducao">
-			<div class="img_home">
 				<img id="usina" src="Imagem/usina1.jpg" alt="usina">
 				<p>
 						<b class="txt2">O que é Hidrogênio?</b>
@@ -84,8 +83,6 @@
 				</p>
 				<p class="txt1">Um dos processos utilizados é chamado reforma a vapor que em altas temperaturas, com a utilização de catalisadores, consegue-se separar o hidrogênio de combustíveis como etanol e gás natural.
 					 Outro modo de separar o hidrogênio é por eletrólise, em que se divide a molécula de água ao meio, separando o hidrogênio e o oxigênio, por meio da passagem de uma corrente elétrica.</p>
-
-			</div>
 		</div>
 
 		<!-- Divisão em Verde - gif e texto com espaçamento de linhas em css-->
@@ -93,14 +90,14 @@
 		<div class="div2">
 			<img id="clicoh2o" src="Imagem/videoclico.gif" alt="video">
 
-			<h3 class="tituloDiv2">Como é gerado o Combustível?</h3>
+			<h3 class="textoDiv2">Como é gerado o Combustível?</h3>
 				<b>
 					<p class="textoDiv2">Para produzir energia com base no hidrogênio, são utilizadas células a combustível que combinam hidrogênio com oxigênio, em um processo eletroquímico.
 						 Estas células requerem alimentação contínua de hidrogênio pelo ânodo e de oxigênio pelo cátodo A conversão a partir da reação de átomos de hidrogênio com átomos de oxigênio,
 						 formam eletricidade, calor e água. Sendo assim, o processo de obtenção de energia por este meio não produz subprodutos nocivos à natureza. As células a combustível são consideradas o melhor modo de aproveitamento da conversão de H2 em energia.
 					</p>
-
 		</div>
+
 		<!-- Divisão em Branco - texo e tabela para imagens clicaveis-->
 		<div class="tiposCelulas">
 						<div class="textoCor1">
@@ -150,7 +147,7 @@
 			</p>
 			<p class="textoCelulas">
 					Neste tipo de células de combustível, a redução do oxigênio no cátodo é mais rápida em eletrólitos alcalinos,
-					comparativamente com os ácidos e, devido a isso, existe a possibilidade da utilização de metais não nobres neste tipo de células [Larminie, 2002].
+					comparativamente com os ácidos e, devido a isso, existe a possibilidade da utilização de metais não nobres neste tipo de células.
 			</p>
 			<br>
 			<p>
@@ -158,7 +155,7 @@
 			</p>
 			<p class="textoCelulas">
 					As células de combustível ácido fosfóricas foram as primeiras a ser produzidas comercialmente e apresentam uma ampla aplicação a nível mundial.
-					Muitas unidades de 200 kW, produzidas pela empresa “International Fuel Cells Corporation” estão instaladas nos Estados Unidos e na Europa [Larminie, 2002].
+					Muitas unidades de 200 kW, produzidas pela empresa “International Fuel Cells Corporation” estão instaladas nos Estados Unidos e na Europa.
 			</p>
 			<br>
 			<p>
@@ -167,7 +164,7 @@
 			<p class="textoCelulas">
 					A célula de combustível de carbonato fundido utiliza como eletrólito uma combinação de carbonatos alcalinos (Na, K, Li), que são estabilizados num suporte de LiAlO2.
 					Este tipo de células de combustível funciona na gama de temperaturas entre 600 e 700 ºC, para as quais os carbonatos alcalinos formam um sal altamente condutor de íons (íon carbonato).
-					Para temperaturas elevadas pode-se utilizar o níquel como catalisador no ânodo e óxido de níquel no cátodo, não sendo necessária a utilização de metais nobres [Hirschenhofer et al., 1998].
+					Para temperaturas elevadas pode-se utilizar o níquel como catalisador no ânodo e óxido de níquel no cátodo, não sendo necessária a utilização de metais nobres.
 			</p>
 			<br>
 			<p>
@@ -175,12 +172,14 @@
 			</p>
 			<p class="textoCelulas">
 					As células de combustível de óxido sólido funcionam na gama de temperaturas entre os 600 e os 1000 ºC,
-					possibilitando assim velocidades de reação elevadas sem a utilização de catalisadores nobres [Hirschenhofer et al., 1998]. O metano pode ser utilizado diretamente, não sendo necessária a utilização de uma unidade de reformação externa. No entanto, os materiais cerâmicos que constituem estas células acarretam dificuldades adicionais na sua utilização, envolvendo custos de fabrico elevados e sendo necessários muitos equipamentos extra para que a célula produza energia elétrica. [Larminie, 2002]
+					possibilitando assim velocidades de reação elevadas sem a utilização de catalisadores nobres [Hirschenhofer et al., 1998]. O metano pode ser utilizado diretamente,
+					não sendo necessária a utilização de uma unidade de reformação externa. No entanto, os materiais cerâmicos que constituem estas células acarretam dificuldades adicionais na sua utilização, envolvendo custos de fabrico elevados e sendo necessários muitos equipamentos extra para que a célula produza energia elétrica.
 			</p>
 
 		</div>
 		<!--Divisão em cinza - Texto e Imagem-->
 		<div class="curiosidades">
+			<img id="sustentavel" src="Imagem/curiosidade.jpg" alt="fundo">
 			<h3>Curiosidades</h3>
 			   <p>Um exemplo do potencial energético do Hidrogênio está na fonte de energia do Sol - compõe 30% da massa solar.
 			      É com a energia do hidrogênio que o Sol aquece a Terra, favorecendo a vida em nosso planeta.</P>
@@ -197,9 +196,6 @@
 
 				<p>Além da NASA, as aplicações mais importantes para as células de combustível são as centrais de produção de eletricidade
 				estacionárias e de distribuição, veículos elétricos motorizados e equipamentos elétricos portáteis.</p>
-
-				<img id="sustentavel" src="Imagem/download.jpg" alt="fundo">
-
 		</div>
 
 
