--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -91,20 +91,25 @@
 
       <div class="app1">
         <img id="game1" src="Imagem/aperte-fala.png" alt="game3">
-        <h4 class="luzTextDir">Fale se puder</h4>
-        <p class="luzTextsubDir">Fale a palavra correta!</p>
+        <h4 class="luzTextDir">Diga a resposta</h4>
+        <p class="luzTextsubDir">Analise a imagem e diga a respota correta.</p>
       </div>
 
       <div class="app2">
         <img id="game2" src="Imagem/alternativa.png" alt="game4">
-        <h4 class="luztextEsq">Alternativa</h4>
-        <p class="luztextsubEsq">Conecte todas as linhas  e encontre o caminho para próxima fase</p>
+        <h4 class="luztextEsq">Múltipla escolha</h4>
+        <p class="luztextsubEsq">Selecione a alterniva correta, baseando-se em nosso site.</p>
       </div>
 
       <div class="app1">
         <img id="game1" src="Imagem/verdade-falso.png" alt="game5">
         <h4 class="luzTextDir">Verdadeiro ou falso</h4>
-        <p class="luzTextsubDir">Utilize o que foi visto no site para selecionar a resposta correta</p>
+        <p class="luzTextsubDir">Utilize o que foi visto no site e responda se é Verdadeiro ou falso.</p>
+      </div>
+
+      <div class="app3">
+        <img id="trofeu" src="Imagem/torfeu.png" alt="brain">
+        <h2 class="subtrofeu">Conclua e receba sua avalição!</h2>
       </div>
 
     </div>
