--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -71,17 +71,17 @@
 		<div  class="introducao">
 				<img id="usina" src="Imagem/usina1.jpg" alt="usina">
 				<p>
-						<b class="txt2">O que é Hidrogênio?</b>
+						<b class="tituloIntroducao">O que é Hidrogênio?</b>
 				</p>
-				<p class="txt1">
+				<p class="txtIntroducao">
 						O Hidrogênio é um elemento químico abundante no Universo, embora o hidrogênio elementar seja raro na Terra.
 					   Este é produzido a partir de processos industriais, entre eles o uso de hidrocarbonetos.
 					   O Hidrogênio é um gás (em estado normal) inodoro, incolor e inflamável.
 				</p>
 				<p>
-						<b class="txt2">Processo de extração:</b>
+						<b class="tituloIntroducao">Processo de extração:</b>
 				</p>
-				<p class="txt1">Um dos processos utilizados é chamado reforma a vapor que em altas temperaturas, com a utilização de catalisadores, consegue-se separar o hidrogênio de combustíveis como etanol e gás natural.
+				<p class="txtIntroducao">Um dos processos utilizados é chamado reforma a vapor que em altas temperaturas, com a utilização de catalisadores, consegue-se separar o hidrogênio de combustíveis como etanol e gás natural.
 					 Outro modo de separar o hidrogênio é por eletrólise, em que se divide a molécula de água ao meio, separando o hidrogênio e o oxigênio, por meio da passagem de uma corrente elétrica.</p>
 		</div>
 
@@ -179,7 +179,7 @@
 		</div>
 		<!--Divisão em cinza - Texto e Imagem-->
 		<div class="curiosidades">
-			<img id="sustentavel" src="Imagem/curiosidade.jpg" alt="fundo">
+			<img id="sustentavel" src="Imagem/curiosidade.jpg" alt="curiosidadesimagem">
 			<h3>Curiosidades</h3>
 			   <p>Um exemplo do potencial energético do Hidrogênio está na fonte de energia do Sol - compõe 30% da massa solar.
 			      É com a energia do hidrogênio que o Sol aquece a Terra, favorecendo a vida em nosso planeta.</P>
