--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -71,7 +71,7 @@
       <h1 class="titulo"><center>Brain Energy</center></h1>
 
         <img id="brain" src="Imagem/hello.png" alt="brain">
-        <h3 class="subTitulo">Teste seu conhecimento com nosso aplicativo</h3>
+        <h2 class="subTitulo">Teste seu conhecimento com nosso aplicativo</h2>
         <p class="subTexto">São cinco jogos desafiadores com temas abordados em nossa plataforma web.
            Baixe-o e jogue gratuitamente!</p>
     </div>
@@ -92,7 +92,7 @@
       <div class="app1">
         <img id="game1" src="Imagem/aperte-fala.png" alt="game3">
         <h4 class="luzTextDir">Diga a resposta</h4>
-        <p class="luzTextsubDir">Analise a imagem e diga a respota correta.</p>
+        <p class="luzTextsubDir">Analise a imagem e ache a resposta com as letras disponíveis.</p>
       </div>
 
       <div class="app2">
