--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -135,7 +135,7 @@
 		<!--Divisão em Verde - com link a "trocaCor1"-->
 		<div class="divCelulas">
 			<p>
-					<b class="Titulocelulas">Células de combustível com membrana de permuta protônica (CCMPP)</b>
+					<b class="Titulocelulas1">Células de combustível com membrana de permuta protônica (CCMPP)</b>
 			</p>
 			<p class="textoCelulas">
 					A célula de combustível com membrana de permuta protônica apresenta a vantagem da sua simplicidade de funcionamento.
@@ -143,7 +143,7 @@
 			</p>
 			<br>
 			<p>
-					<b class="Titulocelulas">Células de combustível alcalinas (CCA)</b>
+					<b class="Titulocelulas2">Células de combustível alcalinas (CCA)</b>
 			</p>
 			<p class="textoCelulas">
 					Neste tipo de células de combustível, a redução do oxigênio no cátodo é mais rápida em eletrólitos alcalinos,
@@ -151,7 +151,7 @@
 			</p>
 			<br>
 			<p>
-					<b class="Titulocelulas">Células de combustível ácido fosfóricas (CCAF)</b>
+					<b class="Titulocelulas3">Células de combustível ácido fosfóricas (CCAF)</b>
 			</p>
 			<p class="textoCelulas">
 					As células de combustível ácido fosfóricas foram as primeiras a ser produzidas comercialmente e apresentam uma ampla aplicação a nível mundial.
@@ -159,7 +159,7 @@
 			</p>
 			<br>
 			<p>
-					<b class="Titulocelulas">Células de combustível de carbonato fundido (CCCF)</b>
+					<b class="Titulocelulas4">Células de combustível de carbonato fundido (CCCF)</b>
 			</p>
 			<p class="textoCelulas">
 					A célula de combustível de carbonato fundido utiliza como eletrólito uma combinação de carbonatos alcalinos (Na, K, Li), que são estabilizados num suporte de LiAlO2.
@@ -168,7 +168,7 @@
 			</p>
 			<br>
 			<p>
-					<b class="Titulocelulas">Células de combustível de óxido sólido (CCOS)</b>
+					<b class="Titulocelulas5">Células de combustível de óxido sólido (CCOS)</b>
 			</p>
 			<p class="textoCelulas">
 					As células de combustível de óxido sólido funcionam na gama de temperaturas entre os 600 e os 1000 ºC,
