--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -1,6 +1,6 @@
 <DOCTYPE html>
-  <html charset="UTF-8">
-  	<head lang="pt-br">
+  <html>
+  	<head>
   		<title>Brain Energy</title>
   		<link rel="stylesheet" href="CSS/Paginas.css">
   		<link rel="stylesheet" href="CSS/MenuHF.css">
