finalizado o footer, não gosto pega no meu pau

--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -179,7 +179,10 @@
 
 	<footer>
 		<img id="logoFooter" src="Imagem/logoFooter.png">
-		<p class="copyright">
+		<p class="copyright" >
+			<a href="Formulario.html">Entre em Contato</a>&nbsp&nbsp&nbsp
+			<a href="app.html">Conheça Nosso APP</a>&nbsp&nbsp&nbsp
+			<a href="http://twixar.me/JY0n">Chegue até Nós</a><br><br>
 			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
 			Cia. MahaloEntertainment Soluçoes de Informática<br>
 			Copyright2019
