OLA DEUS ACHO QUE VOCE EXISTE POR FAVOR ME AJUDA

--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -54,7 +54,7 @@
 
 
 	<div class="logo">
-		<img src="Imagem/Energy_logo.png">
+		<!--<img src="Imagem/Energy_logo.png">-->
 		<ul>
 			<li><a class="active" href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
