--- a/SiteEnergiaR/WebContent/Formulario.html
+++ b/SiteEnergiaR/WebContent/Formulario.html
@@ -40,44 +40,37 @@
 				<div class="mySlides fade">
 					<div class="numbertext">1 / 6</div>
 					<img src="Imagem\onda.jpg" class="imgSlide">
-					<div class="text">Ondas</div>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 6</div>
 					<img src="Imagem\solar.jpg" class="imgSlide">
-					<div class="text">Solar</div>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">3 / 6</div>
 					<img src="Imagem\eolica.jpg" class="imgSlide">
-					<div class="text">Eólica</div>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">4 / 6</div>
 					<img src="Imagem\hidrogenio.jpg" class="imgSlide">
-					<div class="text">Hidrogenio</div>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">5 / 6</div>
 					<img src="Imagem\geotermica.jpg" class="imgSlide">
-					<div class="text">Geotermica</div>
 				</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">6 / 6</div>
 					<img src="Imagem\biomassa.jpg" class="imgSlide">
-					<div class="text">Biomassa</div>
 				</div>
 
 		</div>
 
 		<!--Menu-->
 		<div class="logo">
-			<img src="Imagem/Energy_logo.png">
 			<ul>
 				<li><a href="Home.html">HOME</a></li>
 				<li><a href="Solar.html">SOLAR</a></li>
@@ -92,7 +85,7 @@
 		</div>
 
 		<h1><center>Deseja receber mais informações sobre essas energias Inovadoras?</center></h1>
-		<h2><center>Preencha as informações a baifsddddddddddddxo!</center></h2>
+		<h2><center>Preencha as informações a baixo!</center></h2>
 
 		<center>
 			<div  class="trocaCor">
