--- a/SiteEnergiaR/WebContent/Biomassa.html
+++ b/SiteEnergiaR/WebContent/Biomassa.html
@@ -121,7 +121,8 @@
 
 		</div>
 
-		<div class="div2Biomassa">
+		<div class="div2Biomassa" style="height:280px">
+			<img id="Geotermica_4" src="Imagem\Geotermica_4.png" alt="Vantagens">
 			<p class="b1"><b>Vantagens:</b></p>
 
 			<p class="a1">
@@ -130,7 +131,7 @@
 				- É menos agressiva ao meio ambiente<br>
 				- Produção a partir de uma grande variedade de materiais<br>
 			</p>
-
+			<img id="Geotermica_5" src="Imagem\Geotermica_5.png" alt="Desvantagens">
 			<p class="b1"><b>Desvantagens:</b></p>
 
 			<p class="a1">
