--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -84,13 +84,13 @@
 	</div>
 
 	<div class="terceiraDiv">
-		<img id="onda3" src="Imagem/Onda.jpg" alt="Ondas">
+		<img id="Geotermica_4" src="Imagem\Geotermica_4.png" alt="Vantagens">
 			<p><b>Vantagens:</b></p>
 
 			<p>É uma energia renovável.</p>
 			<p>Não produz qualquer tipo de poluição.</p>
 			<p>Estão menos dependentes das condições da costa.</p>
-
+		<img id="Geotermica_5" src="Imagem\Geotermica_5.png" alt="Desvantagens" style="margin-bottom:15px;">
 			<p><b>Desvantagens:</b></p>
 
 			<p>Instalações de potência reduzida;</p>
