--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -50,7 +50,7 @@
   				<li><a href="Solar.html">SOLAR</a></li>
   				<li><a href="Eolica.html">EOLICA</a></li>
   				<li><a href="Biomassa.html">BIOMASSA</a></li>
-  				<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
+  				<li><a href="Hidrogenio.html">HIDROGÊNIO</a></li>
   				<li><a href="Geotermica.html">GEOTERMICA</a></li>
   				<li><a href="Ondas.html">ONDAS</a></li>
   				<li><a href="Formulario.html">FORMULARIO</a></li>
