--- a/SiteEnergiaR/WebContent/Formulario.html
+++ b/SiteEnergiaR/WebContent/Formulario.html
@@ -11,8 +11,9 @@
 			.divForm {
 				width: 30%;
 				padding: 30px;
-				margin-bottom: 10px;
+				margin-bottom: 7%;
 				border-radius: 15px;
+
 			}
 
 			.formu {
@@ -20,11 +21,11 @@
 				width: 90px;
 				margin: 10px;
 				margin-left: -30px;
+
 			}
 
 			.botaoForm {
 				padding: 10 25 10 25;
-
 				margin-top:25px;
 			}
 
