--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -51,7 +51,7 @@
 				<li><a href="Solar.html">SOLAR</a></li>
 				<li><a href="Eolica.html">EOLICA</a></li>
 				<li><a href="Biomassa.html">BIOMASSA</a></li>
-				<li><a class="active" href="Hidrogenio.html">HIDROGÊNIO</a></li>
+				<li><a class="active" href="Hidrogenio.html">HIDROGENIO</a></li>
 				<li><a href="Geotermica.html">GEOTERMICA</a></li>
 				<li><a href="Ondas.html">ONDAS</a></li>
 				<li><a href="Formulario.html">FORMULARIO</a></li>
@@ -84,8 +84,8 @@
 			<img id="clicoh2o" src="Imagem/videoclico.gif" alt="video">
 
 			<h3 class="textoDiv2">Como é gerado o Combustível?</h3>
-
-					<p class="textoDiv2" id="textoDiv2">Para produzir energia com base no hidrogênio, são utilizadas células a combustível que combinam hidrogênio com oxigênio, em um processo eletroquímico.
+				<b>
+					<p class="textoDiv2">Para produzir energia com base no hidrogênio, são utilizadas células a combustível que combinam hidrogênio com oxigênio, em um processo eletroquímico.
 						 Estas células requerem alimentação contínua de hidrogênio pelo ânodo e de oxigênio pelo cátodo A conversão a partir da reação de átomos de hidrogênio com átomos de oxigênio,
 						 formam eletricidade, calor e água. Sendo assim, o processo de obtenção de energia por este meio não produz subprodutos nocivos à natureza. As células a combustível são consideradas o melhor modo de aproveitamento da conversão de H2 em energia.
 					</p>
@@ -171,21 +171,21 @@
 
 		</div>
 		<!--Divisão em cinza - Texto e Imagem-->
-		<div class="curiosidades">
+		<div class="curiosidades" style="margin-bottom: -10px">
 			<img id="sustentavel" src="Imagem/curiosidade.jpg" alt="curiosidadesimagem">
 			<h3>Curiosidades</h3>
 			   <p>Um exemplo do potencial energético do Hidrogênio está na fonte de energia do Sol - compõe 30% da massa solar.
 			      É com a energia do hidrogênio que o Sol aquece a Terra, favorecendo a vida em nosso planeta.</P>
-
+				<b>
 				<p>As misturas dos gases hidrogênio e oxigênio são inflamáveis, até mesmo explosivos, dependendo da concentração.
 				Quando queimado com oxigênio puro, os únicos sub-produtos são o calor e a água.
 				Quando queimado com ar, constituído por cerca de 68% de nitrogênio e 21% de oxigênio, alguns óxidos de nitrogênio (NOX) são formados.
 				Ainda assim, a queima de hidrogênio com ar produz menos poluentes atmosféricos que os combustíveis fósseis (petróleo, carvão).</p>
-
+				<b>
 				<p>A agência espacial dos EUA, a NASA, percebeu estas qualidades do hidrogênio e o utiliza nos seus projetos espaciais para a propulsão dos foguetes,
 				pois estes requerem características não obtidas com outros combustíveis, tais como: o baixo peso, a compactação e a capacidade de grande armazenamento de energia.
 				Quando utilizado em células a combustível, a água que resulta do processo é consumida pelos astronautas!</P>
-
+				<b>
 
 				<p>Além da NASA, as aplicações mais importantes para as células de combustível são as centrais de produção de eletricidade
 				estacionárias e de distribuição, veículos elétricos motorizados e equipamentos elétricos portáteis.</p>
