--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -45,19 +45,19 @@
 
 		</div>
 
-	<div class="logo">
-		<ul>
-			<li><a href="Home.html">HOME</a></li>
-			<li><a href="Solar.html">SOLAR</a></li>
-			<li><a href="Eolica.html">EOLICA</a></li>
-			<li><a href="Biomassa.html">BIOMASSA</a></li>
-			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
-			<li><a href="Geotermica.html">GEOTERMICA</a></li>
-			<li><a class="active" href="Ondas.html">ONDAS</a></li>
-			<li><a href="Formulario.html">FORMULARIO</a></li>
-			<li><a href="app.html">APP</a></li>
-		</ul>
-	</div>
+		<div class="logo">
+			<ul>
+				<li><a href="Home.html">HOME</a></li>
+				<li><a href="Solar.html">SOLAR</a></li>
+				<li><a href="Eolica.html">EOLICA</a></li>
+				<li><a href="Biomassa.html">BIOMASSA</a></li>
+				<li><a href="Hidrogenio.html">HIDROGÊNIO</a></li>
+				<li><a href="Geotermica.html">GEOTERMICA</a></li>
+				<li><a class="active" href="Ondas.html">ONDAS</a></li>
+				<li><a href="Formulario.html">FORMULÁRIO</a></li>
+				<li><a href="app.html">APP</a></li>
+			</ul>
+		</div>
 
 		<h1><center>Energia das Ondas</center></h1>
 
@@ -100,7 +100,7 @@
 
 	</div>
 
-	<div class="quartaDiv">
+	<div class="quartaDiv" style="margin-bottom:-8px">
 			<p><b>Curiosidades:</b></p>
 			<p>Ceará possui a primeira usina de ondas da América Latina, localizada no quebra-mar do Porto de Pecém, a 60km de Fortaleza, a usina de ondas
 				é responsável pela geração de energia elétrica por meio do movimento das ondas do mar e com tecnologia 100% nacional.A estimativa é de que o
