--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -50,7 +50,7 @@
 				<li><a class="active" href="Solar.html">SOLAR</a></li>
 				<li><a href="Eolica.html">EOLICA</a></li>
 				<li><a href="Biomassa.html">BIOMASSA</a></li>
-				<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
+				<li><a href="Hidrogenio.html">HIDROGÊNIO</a></li>
 				<li><a href="Geotermica.html">GEOTERMICA</a></li>
 				<li><a href="Ondas.html">ONDAS</a></li>
 				<li><a href="Formulario.html">FORMULARIO</a></li>
@@ -91,26 +91,19 @@
 
 	<!-- Divisão em Verde -->
 	<div  id="trocaCor_Solar3">
-		<br>
-		<br>
-		 <h1>
-	     <b>
-	       Inversor de Energia:
-	     </b>
-	   </h1>
+
+		 <img id="solar_4" src="Imagem/Solar_4.png" alt="Solar_Desenho_4">
+		 <h1><b>Inversor de Energia:</b></h1>
 	   <p>
-	     O inversor de energia é o equipamento que faz a conversão da energia recebida, ele transforma a energia solar que está em corrente continua CC* e transforma em corrente Alternada CA* após passar pelo inversor a energia pode ser utilizada em qualquer equipamento domestico e em alguns equipamentos industriais.
+	     O inversor de energia é o equipamento que faz a conversão da energia recebida, ele transforma a energia solar que está em corrente continua CC*
+			 e transforma em corrente Alternada CA* após passar pelo inversor a energia pode ser utilizada em qualquer equipamento domestico e em alguns equipamentos industriais.
 	   </p>
-		<img id="solar_4" src="Imagem/Solar_4.png" alt="Solar_Desenho_4">
-	    <h1>
-	      <b>
-	      Corrente Continua:
-	      </b>
-	    </h1>
+
+	    <h1><b>Corrente Continua:</b></h1>
 	    <p>
-	      (“CC” a corrente a qual não tem polaridade normalmente utilizada em circuitos eletrônicos, como notebooks, tvs, impressoras... está rede normalmente é convertida de CA para CC através de uma ponte retificadora)
+	      (“CC” a corrente a qual não tem polaridade normalmente utilizada em circuitos eletrônicos, como notebooks, tvs, impressoras...
+				está rede normalmente é convertida de CA para CC através de uma ponte retificadora)
 	    </p>
-			<br>
 	    <h1>
 	      <b>
 	      Corrente Alternada:
